####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = ospfrouter
ospfrouter_SOURCES = main.c 
ospfrouter_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.c area.h conf.h display.h ifsm.h llist.h lsslist.h nalist.h nsm.h ospf.h ospf_if.h ospf_nb.h packet.h process_pkt.h ralist.h send_pkt.h timer.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = ospfrouter

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
ospfrouter_LDFLAGS = $(all_libraries) 
                                                                                
